respect local number format in cond format dlg, fdo#60574

Change-Id: Iec185ac6c6447176731619249cdda4457f1bb8a3